syntax = "proto3";
package tendermint.p2p;

option go_package = "github.com/dashpay/tenderdash/proto/tendermint/p2p";

import "gogoproto/gogo.proto";

message PexAddress {
  string url = 1 [(gogoproto.customname) = "URL"];
}

message PexRequest {}

message PexResponse {
  repeated PexAddress addresses = 1 [(gogoproto.nullable) = false];
}
